# mod_sqrl

./: .gitignore  Makefile.am  README.md  bak.cfg.ac  check-driver.sh  check2trs.xslt  configure.ac
apache2/: Makefile.am  mod_sqrl.c
apache2/sample/conf/extra/: sqrl.conf
apache2/sample/htdocs/: index.html
apache2/sample/htdocs/sqrl/: login.html
apache2/src/: Makefile.am
doc/: dependencies.txt  install_dependencies.sh  sample.conf  sodium_build.txt
libsqrl/: Makefile.am
libsqrl/src/: Makefile.am  sqrl.c  sqrl.h  sqrl_encodings.c  sqrl_encodings.h
libsqrl/test/: .gitignore  Makefile.am  sodium.c  sqrl_encodings_test.c  sqrl_test.c  test.c
m4/: .gitignore  apreq.m4  apxs.m4
src/: Makefile  mod_sqrl.c  modules.mk  sqrl.c  sqrl.h  sqrl_encodings.c  sqrl_encodings.h  utils.c  utils.h
src/main/c/: Makefile.am  mod_sqrl.c  modules.mk
src/sample/conf/extra/: sqrl.conf
src/test/c/: Makefile  Makefile.am  sqrl_encodings_test.c
test/: Makefile  Makefile.am  base64.c  login.html  sqrl_encodings_test.c  sqrl_encodings_test.cpp
test/conf/extra/: sqrl.conf
test/htdocs/: index.html  login.html  login_success.html  post_sqrl.html
test/htdocs/protected/: login_protected.html
test/htdocs/sqrl/: login.html
